--- a/package.json
+++ b/package.json
@@ -105,11 +105,14 @@
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "file-loader": "^0.8.5",
+    "firebase": "^2.4.1",
     "hoist-non-react-statics": "^1.0.3",
     "http-proxy": "^1.12.0",
+    "immutable": "^3.7.6",
     "invariant": "^2.2.0",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "lodash": "^4.5.1",
     "lru-memoize": "^1.0.0",
     "map-props": "^1.0.0",
     "multireducer": "^2.0.0",
