--- a/package.json
+++ b/package.json
@@ -115,11 +115,14 @@
     "lodash": "^4.5.1",
     "lru-memoize": "^1.0.0",
     "map-props": "^1.0.0",
+    "moment": "^2.11.2",
     "multireducer": "^2.0.0",
     "piping": "^0.3.0",
     "pretty-error": "^1.2.0",
+    "qs": "^6.1.0",
     "react": "^0.14.2",
     "react-bootstrap": "^0.28.1",
+    "react-datepicker": "^0.23.2",
     "react-dom": "^0.14.1",
     "react-helmet": "^2.2.0",
     "react-inline-css": "^2.0.0",
