--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "qs": "^6.1.0",
     "react": "^0.14.2",
     "react-bootstrap": "^0.28.1",
+    "react-cookie": "^0.4.5",
     "react-datepicker": "^0.23.2",
     "react-dom": "^0.14.1",
     "react-google-maps": "^4.9.1",
